--- a/index.html
+++ b/index.html
@@ -544,59 +544,54 @@
 
     <div class="overlay">
       <form class="pop-up">
-        <button class="pop-up-close-btn" type="button">X</button>
+        <button class="pop-up-close-btn" type="button">
+          <svg class="pop-up-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
         <p class="pop-up-title">
           Leave your contacts and we will call you back
         </p>
         <fieldset class="pop-up-field">
           <label
             >Name
-            <svg class="" width="18" height="18">
+            <svg class="pop-up-field-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-person-contact"></use>
             </svg>
-            <input
-              type="text"
-              name="name"
-              placeholder="your name"
-              class="pop-up-field-input"
-            />
+            <input type="text" name="name" class="pop-up-field-input" />
           </label>
         </fieldset>
 
         <fieldset class="pop-up-field">
           <label
             >Phone
-            <svg class="" width="18" height="24">
+            <svg class="pop-up-field-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
-            <input
-              type="tel"
-              name="tel"
-              placeholder="your number"
-              class="pop-up-field-input"
-            />
+            <input type="tel" name="tel" class="pop-up-field-input" />
           </label>
         </fieldset>
 
         <fieldset class="pop-up-field">
           <label
             >Email
-            <svg class="" width="18" height="24">
+            <svg class="pop-up-field-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
-            <input
-              type="email"
-              name="email"
-              placeholder="your email"
-              class="pop-up-field-input"
-            />
+            <input type="email" name="email" class="pop-up-field-input" />
           </label>
         </fieldset>
 
         <fieldset class="pop-up-field">
           <label
             >Comment
-            <textarea placeholder="Text input"></textarea>
+            <textarea
+              class="pop-up-field-textarea"
+              name="comment"
+              rows="3"
+              placeholder="Text input"
+            >
+            </textarea>
           </label>
         </fieldset>
 
