--- a/index.html
+++ b/index.html
@@ -521,17 +521,17 @@
           </ul>
         </div>
         <div class="footer-form">
+          <p class="footer-soc-text">Subscribe</p>
           <form class="form">
-            <label class="form-label">
-              Subscribe
+            <label class="form-label" for="">
               <input
                 class="form-input"
                 type="email"
-                name="email-address"
+                name="email"
                 placeholder="E-mail"
               />
             </label>
-            <button class="form-button" type="submit">
+            <button class="hero-banner-button form-button" type="submit">
               Subscribe
               <svg class="form-icons" width="24" height="24">
                 <use href="./images/icons.svg#icon-plane"></use>
@@ -542,7 +542,7 @@
       </div>
     </footer>
 
-    <div class="overlay">
+    <!-- <div class="overlay">
       <form class="pop-up">
         <button class="pop-up-close-btn" type="button">
           <svg class="pop-up-close-icon" width="8" height="8">
@@ -607,6 +607,6 @@
           Send
         </button>
       </form>
-    </div>
+    </div> -->
   </body>
 </html>
