--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <div class="footer-form">
           <p class="footer-soc-text">Subscribe</p>
           <form class="form">
-            <label class="form-label" for="">
+            <label class="form-label">
               <input
                 class="form-input"
                 type="email"
@@ -541,8 +541,7 @@
         </div>
       </div>
     </footer>
-
-    <!-- <div class="overlay">
+    <div class="overlay">
       <form class="pop-up">
         <button class="pop-up-close-btn" type="button">
           <svg class="pop-up-close-icon" width="8" height="8">
@@ -586,9 +585,9 @@
           <label
             >Comment
             <textarea
-              class="pop-up-field-textarea"
+              class="pop-up-field-textarea pop-up-field-input"
               name="comment"
-              rows="3"
+              rows="10"
               placeholder="Text input"
             >
             </textarea>
@@ -597,7 +596,7 @@
 
         <fieldset class="pop-up-field">
           <input type="checkbox" name="provacy" />
-          <label class="pop-up-privacy" for="privacy"
+          <label class="pop-up-privacy"
             >I accept the terms and conditions of the
             <span class="pop-up-privacy blue-text">Privacy Policy</span>
           </label>
@@ -607,6 +606,6 @@
           Send
         </button>
       </form>
-    </div> -->
+    </div>
   </body>
 </html>
