--- a/index.html
+++ b/index.html
@@ -541,8 +541,11 @@
         </div>
       </div>
     </footer>
+
+    <!-- pop-up start -->
+
     <div class="overlay">
-      <form class="pop-up">
+      <div class="pop-up">
         <button class="pop-up-close-btn" type="button">
           <svg class="pop-up-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
@@ -551,61 +554,91 @@
         <p class="pop-up-title">
           Leave your contacts and we will call you back
         </p>
-        <fieldset class="pop-up-field">
-          <label
-            >Name
-            <svg class="pop-up-field-icon" width="18" height="18">
+
+        <form>
+          <div class="pop-up-form">
+            <label class="form-label" for="user-name">Name</label>
+          </div>
+
+          <div class="form-input">
+            <input
+              class="form-input-line"
+              type="text"
+              name="user-name"
+              id="user-name"
+            />
+            <svg class="form-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-person-contact"></use>
             </svg>
-            <input type="text" name="name" class="pop-up-field-input" />
-          </label>
-        </fieldset>
+          </div>
 
-        <fieldset class="pop-up-field">
-          <label
-            >Phone
-            <svg class="pop-up-field-icon" width="18" height="24">
+          <div class="pop-up-form">
+            <label class="form-label" for="user-phone">Phone</label>
+          </div>
+
+          <div class="form-input">
+            <input
+              class="form-input-line"
+              type="tel"
+              name="user-phone"
+              id="user-phone"
+            />
+            <svg class="form-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
-            <input type="tel" name="tel" class="pop-up-field-input" />
-          </label>
-        </fieldset>
+          </div>
 
-        <fieldset class="pop-up-field">
-          <label
-            >Email
-            <svg class="pop-up-field-icon" width="18" height="24">
+          <div class="pop-up-form">
+            <label class="form-label" for="user-email">Email</label>
+          </div>
+
+          <div class="form-input">
+            <input
+              class="form-input-line"
+              type="email"
+              name="user-email"
+              id="user-email"
+            />
+            <svg class="form-input-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
-            <input type="email" name="email" class="pop-up-field-input" />
-          </label>
-        </fieldset>
+          </div>
 
-        <fieldset class="pop-up-field">
-          <label
-            >Comment
+          <div class="pop-up-form">
+            <label class="form-label" for="user-comment">Comment</label>
             <textarea
-              class="pop-up-field-textarea pop-up-field-input"
-              name="comment"
-              rows="10"
+              class="form-textarea"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
             >
             </textarea>
-          </label>
-        </fieldset>
+          </div>
 
-        <fieldset class="pop-up-field">
-          <input type="checkbox" name="provacy" />
-          <label class="pop-up-privacy"
-            >I accept the terms and conditions of the
-            <span class="pop-up-privacy blue-text">Privacy Policy</span>
-          </label>
-        </fieldset>
+          <div class="pop-up-check">
+            <input
+              class="check-input"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label class="check-label" for="user-privacy"
+              >I accept the terms and conditions of the
+              <span class="check-form">
+                <svg class="check-form-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg>
+              </span>
+              <a class="check-form-link" href>Privacy Policy</a>
+            </label>
+          </div>
+        </form>
 
         <button type="submit" class="pop-up-button hero-banner-button">
           Send
         </button>
-      </form>
+      </div>
     </div>
   </body>
 </html>
