--- a/index.html
+++ b/index.html
@@ -557,45 +557,45 @@
         <form>
           <div class="pop-up-form">
             <label class="form-label" for="user-name">Name</label>
-          </div>
-          <div class="form-input">
-            <input
-              class="form-input-line"
-              type="text"
-              name="user-name"
-              id="user-name"
-            />
-            <svg class="form-input-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-person-contact"></use>
-            </svg>
+            <div class="form-input">
+              <input
+                class="form-input-line"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="form-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-contact"></use>
+              </svg>
+            </div>
           </div>
           <div class="pop-up-form">
             <label class="form-label" for="user-phone">Phone</label>
-          </div>
-          <div class="form-input">
-            <input
-              class="form-input-line"
-              type="tel"
-              name="user-phone"
-              id="user-phone"
-            />
-            <svg class="form-input-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
+            <div class="form-input">
+              <input
+                class="form-input-line"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+              />
+              <svg class="form-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="pop-up-form">
             <label class="form-label" for="user-email">Email</label>
-          </div>
-          <div class="form-input">
-            <input
-              class="form-input-line"
-              type="email"
-              name="user-email"
-              id="user-email"
-            />
-            <svg class="form-input-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
+            <div class="form-input">
+              <input
+                class="form-input-line"
+                type="email"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="form-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
           <div class="pop-up-form">
             <label class="form-label" for="user-comment">Comment</label>
@@ -622,13 +622,13 @@
                   <use href="./images/icons.svg#icon-click"></use>
                 </svg>
               </span>
-              <a class="check-form-link" href>Privacy Policy</a>
+              <a class="check-form-link" href="#">Privacy Policy</a>
             </label>
           </div>
+          <button type="submit" class="pop-up-button hero-banner-button">
+            Send
+          </button>
         </form>
-        <button type="submit" class="pop-up-button hero-banner-button">
-          Send
-        </button>
       </div>
     </div>
   </body>
