--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
           </div>
           <div class="pop-up-check">
             <input
-              class="check-input"
+              class="check-input visually-hidden"
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
