--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
               </svg>
             </div>
           </div>
-          <div class="pop-up-form">
+          <div class="pop-up-form-comment">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
