--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
           <form class="form">
             <label class="form-label">
               <input
-                class="form-input"
+                class="footer-form-input"
                 type="email"
                 name="email"
                 placeholder="E-mail"
@@ -600,10 +600,10 @@
           <div class="pop-up-form-comment">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
-              class="form-textarea"
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
+              class="form-textarea"
             >
             </textarea>
           </div>
@@ -615,13 +615,13 @@
               id="user-privacy"
               value="true"
             />
+            <span class="check-form">
+              <svg class="check-form-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-click"></use>
+              </svg>
+            </span>
             <label class="check-label" for="user-privacy"
               >I accept the terms and conditions of the
-              <span class="check-form">
-                <svg class="check-form-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-click"></use>
-                </svg>
-              </span>
               <a class="check-form-link" href="#">Privacy Policy</a>
             </label>
           </div>
