span-</textarea>-button

--- a/index.html
+++ b/index.html
@@ -604,8 +604,7 @@
               id="user-comment"
               placeholder="Text input"
               class="form-textarea"
-            >
-            </textarea>
+            ></textarea>
           </div>
           <div class="pop-up-check">
             <input
@@ -615,13 +614,13 @@
               id="user-privacy"
               value="true"
             />
+            <span class="check-form">
+              <svg class="check-form-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-click"></use>
+              </svg>
+            </span>
             <label class="check-label" for="user-privacy"
               >I accept the terms and conditions of the
-              <span class="check-form">
-                <svg class="check-form-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-click"></use>
-                </svg>
-              </span>
               <a class="check-form-link" href="#">Privacy Policy</a>
             </label>
           </div>
